--- a/index.css
+++ b/index.css
@@ -2,3 +2,11 @@
     background-color: steelblue;
     height: 200px
     }
+
+#a{
+    background-color: lemonchiffon;
+}
+
+#t{
+    background-color: rgb(255, 245, 228);
+}
