--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
 #c{
     background-color: steelblue;
-    height: 200px
+    height: 40px;
+    color: oldlace;
+    word-spacing: 30px;
     }
 
 #a{
